# FourthAssignment

./: README.md  inference.py  main.py  pyproject.toml
data/working/: restnet20.csv
src/: __init__.py  dataset.py  models.py  training.py  utils.py
src/dlcv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
